[package]
name = "finance"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.32.0", features = [ "full" ] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono", "json", "macros"] }
color-eyre = "0.6.2"
log = "0.4.14"
env_logger = "0.10.0"
clap = {version = "4.3.21", features = ["derive"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
chrono = { version = "0.4.19", features = ["serde"] }
