[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx  = { workspace = true }
color-eyre  = { workspace = true }
log  = { workspace = true }
env_logger  = { workspace = true }
clap  = { workspace = true }
serde  = { workspace = true }
serde_json  = { workspace = true }
chrono  = { workspace = true }
